--- a/app/src/main/res/layout/header_drawer_layout.xml
+++ b/app/src/main/res/layout/header_drawer_layout.xml
@@ -8,32 +8,47 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@color/colorPrimary">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_sett"
+            android:layout_alignParentRight="true"
+            android:layout_margin="10dp"
+            android:id="@+id/headerSetting"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_centerInParent="true">
+            android:layout_centerInParent="true"
+            android:orientation="vertical">
+
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:src="@mipmap/ic_launcher"
+                android:layout_gravity="center"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nama Siswa"
                 android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:text="Nama Siswa"
                 android:textColor="#fff"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp"/>
+                android:id="@+id/txtNamaSiswa"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="kelas"
                 android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="kelas"
                 android:textColor="#fff"
                 android:textSize="15sp"
-                android:layout_marginTop="10dp"/>
+                android:id="@+id/txtKelas"/>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
