--- a/app/src/main/res/layout/activity_header_setting.xml
+++ b/app/src/main/res/layout/activity_header_setting.xml
@@ -25,7 +25,8 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            android:id="@+id/pic"/>
 
         <TextView
             android:layout_width="wrap_content"
