--- a/app/src/main/res/layout/header_drawer_layout.xml
+++ b/app/src/main/res/layout/header_drawer_layout.xml
@@ -27,7 +27,8 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@mipmap/ic_launcher"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:id="@+id/pic"/>
 
             <TextView
                 android:layout_width="wrap_content"
